css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  transition: .257s;
}

:root {
  --almostBlack: #040B15;
  --lightNavy: #0D5A92;
  --darkishGray: #C2BFC0;
  --dustyBlue: #5091B7;
}

body {
  font-family: 'Poppins', "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  color: #F0F1F1;
}

/* Navigation Starts */
nav.side-nav {
  position: fixed;
  display: flex;
  flex-direction: column;
  background-color: var(--almostBlack);
  height: 100vh;
  width: 235px;
  color: #C2BFC0;
  box-shadow: 0 1px 5px 0px #000;
  padding: .3em 1em;
}

/* Profile Image */
span > img {
  border-radius: 50%;
  border: 6px solid #303234;
}
/* profile Image ends */

nav.side-nav span:nth-child(1),
nav.side-nav h3,
span.social {
  align-self: center;
  margin: .3em 0;
}

span.social a {
  margin: .2em .3em;
  font-size: 18px;
  color: white;
  text-decoration: none;
  text-align: center;
}

span.social a:hover {
  color: var(--dustyBlue);
}

nav.side-nav ul {
  display: flex;
  width: 100%;
  list-style: none;
  display: flex;
  flex-direction: column;
  padding-left: 1em;
  margin-top: 1.5em;
}

nav.side-nav ul li {
  padding: 1em 0;
}

nav.side-nav ul li > a {
  text-decoration: none;
  width: 100%;
  color: var(--darkishGray);
  font-size: 18px;
}

nav.side-nav ul li > a i {
  margin-right: .35em;
}

nav.side-nav ul li > a:nth-child(1):active {
  color: #0D5A92 !important;
}

nav.side-nav ul li > a:hover {
  color: var(--dustyBlue);
}

div.empty {
  flex: 2;
}

footer span:nth-child(2) a {
  text-decoration: none;
  color: var(--dustyBlue);
}

footer span {
  font-size: 12px;
}
/* Navigation Ends */


/* Main section Starts */
main.my-main {
  margin-left: 230px;
  padding: 20px;
  height: 100vh;
  background-color: #1F2024;
}

main.my-main div#home {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
  /* border: 4px solid blue; */
}

main.my-main div#home h1,
main.my-main div#home h3 {
  margin-left: 20%;
}

main.my-main div#home h3 {
  margin-top: 1em;
  font-weight: 100;
}

main.my-main div#home h3 span {
  padding-bottom: .15em;
  border-bottom: 3px solid var(--lightNavy);
}

/* Main Section ends here */

